--- a/style.css
+++ b/style.css
@@ -191,6 +191,17 @@
          cursor: pointer;
      }
 
+     .text a {
+         place-self: center;
+         background-color: #FDAC49;
+         font-family: 'Open Sans', sans-serif;
+         padding: 0.8rem 2.6rem;
+         font-size: 1rem;
+         text-decoration: none;
+         cursor: pointer;
+         color: black;
+     }
+
 
 
 
