--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@
      h1,
      h2,
      h3 {
-         font-family: 'Italiana', serif;
+         font-family: 'Italiana',
+             serif;
          color: #FDAC49;
          place-self: center;
 
@@ -148,7 +149,7 @@
      }
 
      #parallax-3 {
-         background-image: url(billedeKrydrer.jpg);
+         background-image: url(pizzaDegolie.jpg);
 
      }
 
@@ -168,27 +169,20 @@
      .text {
          display: grid;
          grid-template-columns: repeat(1fr);
-         grid-gap: 3rem;
-         height: 600px;
-         background-color: rgba(142, 140, 133, 0.26);
+         height: 700px;
          font-family: 'Open Sans', sans-serif;
-         color: white;
          padding: 5vw;
          color: #E0D3AD;
      }
 
      .text h2 {
-         font-size: 2rem;
+         font-size: 2.4rem;
      }
 
-     .text button {
-         place-self: center;
-         background-color: #FDAC49;
-         font-family: 'Open Sans', sans-serif;
-         padding: 0.8rem 2.6rem;
-         font-size: 1rem;
-         text-decoration: none;
-         cursor: pointer;
+     .text p {
+         font-size: 1.1rem;
+         margin-left: 2rem;
+         margin-right: 2rem;
      }
 
      .text a {
@@ -202,8 +196,15 @@
          color: black;
      }
 
+     .text a:hover {
+         background-color: #E0D3AD;
+     }
 
 
+     ul {
+         margin-left: 1.2rem;
+         color: #FDAC49;
+     }
 
      /******************************TABLET************************/
 
@@ -211,6 +212,16 @@
          .bg-img {
              min-height: 500px;
 
+         }
+
+         .text p {
+             font-size: 1.1rem;
+             margin-left: 5rem;
+             margin-right: 5rem;
+         }
+
+         ul {
+             margin-left: 10rem;
          }
 
          header {
@@ -279,5 +290,26 @@
 
          header img {
              width: 95px;
+         }
+
+         .text p {
+             font-size: 1.3rem;
+             margin-left: 18rem;
+             margin-right: 18rem;
+         }
+
+         ul {
+             font-size: 1.3rem;
+             margin-left: 30rem;
+             margin-bottom: 5rem;
+         }
+
+         #text-1 {
+             height: 700px;
+
+         }
+
+         #text-3 {
+             height: 600px;
          }
      }
