--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
      header {
          height: 60px;
          display: flex;
-         background-color: rgba(0, 0, 0, 0.69);
+         background-color: black;
          overflow: hidden;
          position: fixed;
          top: 0;
@@ -64,7 +64,7 @@
 
      #menu {
          width: 100%;
-         background-color: rgba(0, 0, 0, 0.69);
+         background-color: black;
          list-style-type: none;
          position: fixed;
          top: 8.2vw;
@@ -154,7 +154,7 @@
 
      #parallax-3 {
          background-image: url(img-index/pizzaDegolie.jpg);
-         opacity: 0.8;
+         opacity: 0.7;
      }
 
      .bg-img {
@@ -338,7 +338,7 @@
 
      @media only screen and (min-width: 1160px) {
          .bg-img {
-             min-height: 800px;
+             min-height: 600px;
              background-attachment: fixed;
              background-position: center;
              background-repeat: no-repeat;
@@ -370,11 +370,8 @@
              display: block;
              overflow: hidden;
              position: fixed;
-             /* Set the navbar to fixed position */
              top: 0;
-             /* Position the navbar at the top of the page */
              width: 100%;
-             /* Full width */
              z-index: 1000;
 
          }
@@ -392,18 +389,18 @@
          }
 
          .text p {
-             font-size: 1.3rem;
+             font-size: 1rem;
              margin-left: 18rem;
              margin-right: 18rem;
          }
 
          .text h2 {
-             font-size: 3rem;
+             font-size: 2rem;
 
          }
 
          ul {
-             font-size: 1.3rem;
+
              margin-left: 30rem;
              margin-bottom: 5rem;
          }
@@ -418,11 +415,6 @@
              background-size: 100%;
          }
 
-         #information {
-             display: grid;
-             grid-template-columns: 1fr 1fr;
-         }
-
          .adress {
              text-align: right;
          }
@@ -430,7 +422,7 @@
          .kontakt {
              display: grid;
              grid-template-columns: auto auto auto auto;
-             text-align: center;
+
              line-height: 2;
              margin-left: 20rem;
              margin-right: 20rem;
